@@ -3,6 +3,9 @@ xx/xx/09 release 1.47
 ====================================
 - Every log can have its own set of 
 targets if specified in config file
+- InactivityAction can notify by email 
+if specified in config file.
+- Fixed behaviour in the Timer
 
 ====================================
 06/08/09 release 1.45 
